--- a/docs/lab-02.rmd
+++ b/docs/lab-02.rmd
@@ -1,6 +1,6 @@
 ---
 title: "Geography 176A"
-author: "[Chelsey Su](https://suchaoxi.github.io/geog176a_2020/)"
+author: "[Chelsey Su](https://suchaoxi.github.io)"
 subtitle: 'Lab 02: COVID-19 Pandemic'
 output: 
   html_document:
